kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    app.kubernetes.io/part-of: planmyjourney
    environment: production
