kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: production
  labels:
    app.kubernetes.io/name: user-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: user-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
